# sheet

./: .gitignore  .tempo.config.toml  README.md  sheet.css  sheet.html
.github/: .copilotignore  copilot-instructions.md  memory.md  workflow-state.json
archive/: Test.html  Test2.html  Test3.php  Test_ver2.html  Test_ver3.html
companion/: .gitignore  package-lock.json  package.json  vite.config.ts  wrangler.toml
elements/: attributes.json  character.json  condition.json  dice_pools.json  initiative.json  karma.json  mutations.json  skills.json  spells.json
feedback/: r1_feedback.md
mcp_servers/: QUICKSTART.md  README.md  pyproject.toml  requirements.txt
mcp_servers/base/: __init__.py  agent_server.py
mcp_servers/benchmark/: __init__.py  runner.py  schema.py  writer.py
mcp_servers/executor/: __init__.py  config.py  environment.py  server.py
mcp_servers/memory/: __init__.py  server.py
mcp_servers/session/: __init__.py  server.py
mcp_servers/tests/: tempo_gate.ps1  test_agent_fleet_schema.py  test_benchmark_harness.py  test_config.py  test_environment_tiers.py  test_executor.py  test_gates_dispatch.py  test_integration_namespace.py  test_memory.py  test_server_health.py  test_session.py  test_stress_tools.py  test_symbol_search.py  test_workflow_engine.py  test_workflow_gate.py  test_workflow_router.py  test_workflow_server.py  test_workflow_shape.py
mcp_servers/utils/: __init__.py  results.py
mcp_servers/workflow/: __init__.py  engine.py  gate.py  router.py  server.py  shape.py
plans/: Adept Powers and Mutations.xlsx  Character Creation.xlsx  (+12 more)
(+78 files in other folders)
